# pvanalytics

./: .coveragerc  .flake8  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-min.txt  requirements.txt  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: lint-and-test.yml  pythonpublish.yml
LICENSES/: PVFLEETS_QA_LICENSE  SOLARFORECASTARBITER_LICENSE
docs/: api.rst  conf.py  index.rst  licenses.rst
docs/examples/: azimuth-tilt-detection-pvwatts.py  azimuth-tilt-detection.py  clearsky-detection.py  clearsky-limits-irradiance.py  clipping.py  daily-insolation-limits-irradiance.py  data-completeness.py  data-shifts.py  day-night-masking.py  fixed-nrel.py  hampel-outlier-detection.py  infer-orientation-daily-peak.py  infer-orientation-fit-pvwatts.py  interpolated-periods.py  module-temperature-check.py  performance-ratio-nrel.py  qcrad-consistency-irradiance.py  qcrad-limits-irradiance.py  relative-humidity-limits.py  stale-data.py  start-end-dates.py  system-tracking.py  temperature-limits.py  tracking-nrel.py  tukey-outlier-detection.py  variability-index.py  weather-limits.py  wind-limits.py  zscore-outlier-detection.py
docs/examples/.pylint.d/: infer-orientation-daily-peak1.stats
docs/examples/clearsky-detection/: README.rst  clearsky-detection.py
docs/examples/clipping/: README.rst  clipping.py
docs/examples/data-shifts/: README.rst
docs/examples/data-time-shifts/: shifts-ruptures.py
docs/examples/day-night-masking/: README.rst  day-night-masking.py
docs/examples/energy/: README.rst  cumulative-energy-simple-avg-check.py  cumulative-energy-simple-diff-check.py
docs/examples/gaps/: README.rst  data-completeness.py  stale-data.py
docs/examples/irradiance-quality/: README.rst  clearsky-limits-irradiance.py  component-sum-irradiance.py  daily-insolation-limits-irradiance.py  qcrad-consistency-irradiance.py
docs/examples/metrics/: README.rst  performance-ratio-nrel.py  variability-index.py
docs/examples/orientation/: README.rst  tracking-nrel.py
docs/examples/outliers/: README.rst  pvwatts-outlier-detection.py
docs/examples/pipelines/: pvfleets-temperature-qa.py
docs/examples/pvfleets-qa-pipeline/: README.rst  pvfleets-irradiance-qa.py  pvfleets-power-qa.py  pvfleets-temperature-qa.py
docs/examples/shifts/: README.rst  data-shifts.py  shifts-ruptures.py
docs/examples/snow-detection/: README.rst  plot_snow_mode.py  snow-mode.py
docs/examples/system/: README.rst  infer-orientation-fit-pvwatts.py  system-tracking.py
docs/examples/weather/: README.rst  module-temperature-check.py  (+1 more)
docs/tutorials/: data_shift_pipeline.ipynb
docs/whatsnew/: 0.1.0.rst  0.1.1.rst  0.1.2.rst  0.1.3.rst  0.1.4.rst  0.2.0.rst  0.2.1.rst  0.2.2.rst  index.rst  v0.2.3.rst
pvanalytics/: NREL_performance_ratio.py  __init__.py  _version.py  features.py  filtering.py  metrics.py  system.py
pvanalytics/data/: 50_15min_left_aligned_local.csv  ac_power_inv_2173.csv  ac_power_inv_2173_interpolated_data.csv  ac_power_inv_2173_stale_data.csv  ac_power_inv_7539.csv  ac_power_inv_7539_outliers.csv  irradiance_RMIS_NREL.csv  lorenz_poa_test_dataset.csv  midc_bms_ghi_20220120.csv  nrel_1axis_tracker_mesa_ac_power.csv  nrel_RSF_II.csv  pvlib_data_shift.csv  pvlib_data_shift_stream_example_1.csv  pvlib_data_shift_stream_example_2.csv  rmis_weather_data.csv  serf_east_15min_ac_power.csv  serf_east_1min_ac_power.csv  serf_east_AC_power_system_estimate.csv  serf_east_nsrdb_weather_data.csv  serf_east_psm3_data.csv  serf_west_15min.csv  serf_west_1min.csv  snow_config.json  snow_data.csv  snow_horizon.csv  snow_mask.csv  snow_snowfall.csv  system_10004_ac_energy.csv  system_15_poa_irradiance.parquet  system_4_module_temperature.parquet  system_50_ac_power_2_full_DST.csv  system_50_ac_power_2_full_DST.parquet  system_50_ac_power_2_full_DST_psm3.csv  system_50_ac_power_2_full_DST_psm3.parquet
pvanalytics/features/: __init__.py  clearsky.py  clipping.py  daylight.py  daytime.py  irradiance.py  orientation.py  shading.py  snow.py  time.py
pvanalytics/fitting/: __init__.py  temperature.py
pvanalytics/quality/: __init__.py  data_shifts.py  dc_capacity.py  energy.py  gaps.py  irradiance.py  outliers.py  time.py  util.py  weather.py
pvanalytics/tests/: conftest.py  test_features.py  test_filtering.py  test_metrics.py  test_pvanalytics.py  test_system.py
pvanalytics/util/: __init__.py  _fit.py  _functions.py  _group.py  _normalize.py
(+19 files in other folders)
