[build-system]
requires = ["setuptools>=70.1", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"


[project]
name = "pvanalytics"
description = "PVAnalytics is a python library for the analysis of photovoltaic system-level data."
authors = [
    { name = "pvanalytics Contributors", email = "pvlib-admin@googlegroups.com" },
]
requires-python = ">=3.8"
dependencies = [
    'numpy >= 1.20.0',
    'pandas >= 1.3.0',
    'pvlib >= 0.9.4',
    'scipy >= 1.6.0',
    'statsmodels >= 0.13.0',
    'scikit-image >= 0.18.0',
]
license = "MIT"
classifiers = [
    'Development Status :: 4 - Beta',
    'Operating System :: OS Independent',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering',
]
readme.text = """
PVAnalytics is a collection of functions for working with data
from photovoltaic power systems. The library includes functions for
general data quality tests such as outlier detection, validation that
data is physically plausible, filtering data for specific conditions,
and labeling specific features in the data.

Documentation: https://pvanalytics.readthedocs.io

Source code: https://github.com/pvlib/pvanalytics
"""
readme.content-type = "text/x-rst"
dynamic = ["version"]


[project.optional-dependencies]
optional = [
    'ruptures',
]
doc = [
    'sphinx == 4.5.0',
    'pydata-sphinx-theme == 0.8.1',
    'sphinx-gallery',
    'matplotlib',
    'pyarrow',
    # the following are needed for sphinx < 5.  TODO upgrade to sphinx>5, and
    # get rid of these pins.
    # https://github.com/sphinx-doc/sphinx/issues/11890
    # https://stackoverflow.com/questions/77848565/sphinxcontrib-applehelp-breaking-sphinx-builds-with-sphinx-version-less-than-5-0
    'sphinxcontrib-applehelp==1.0.4',
    'sphinxcontrib-devhelp==1.0.2',
    'sphinxcontrib-htmlhelp==2.0.1',
    'sphinxcontrib-qthelp==1.0.3',
    'sphinxcontrib-serializinghtml==1.1.5',
]
test = [
    'pytest',
    'pytest-cov',
    'packaging',
]
all = ["pvlib[test,optional,doc]"]

[project.urls]
"Bug Tracker" = "https://github.com/pvlib/pvanalytics/issues"
Documentation = "https://pvanalytics.readthedocs.io/"
"Source Code" = "https://github.com/pvlib/pvanalytics"


[tool.setuptools.packages.find]
include = ["pvanalytics*"]


[tool.setuptools.package-data]
pvanalytics = ["pvanalytics/data/*"]

[tool.setuptools_scm]
